Fix alignment and placeholder for level score

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -62,7 +62,7 @@ body {
 
   .game-container {
     position: absolute;
-    top: 38%;
+    top: 46%;
     left: 50%;
     transform: translate(-50%, -50%);
 
@@ -81,7 +81,7 @@ body {
     }
 
     .button-container {
-      margin: 38px auto;
+      margin: 20px auto;
     }
 
     .pushable {
